# app

./: CMakeLists.txt  prj.conf
src/: functionalities.c  functionalities.h  ln.code-workspace  main.c  project.h  u_ubx_protocol.c
